--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
 <p>方便的传送插件</p>
 
+<p><a href="http://www.mcbbs.net/thread-551491-1-1.html">MCBBS</a></p>
+
 <h2>
 <a id="download下载" class="anchor" href="#download%E4%B8%8B%E8%BD%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download/下载:</h2>
 
@@ -48,6 +50,13 @@
 <p>TrustedTeleport.teleport - 允许使用 /tt 命令传送</p>
 
 <p>TrustedTeleport.setting - 允许使用 /ttp 命令</p>
+
+<h2>
+<a id="插件定制" class="anchor" href="#%E6%8F%92%E4%BB%B6%E5%AE%9A%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>插件定制:</h2>
+
+<p>找不到想要的插件？</p>
+
+<p><a href="http://www.isotopestudio.cc/minecraft.html">联系我</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/ISOTOPE-Studio/TrustedTeleport">Trusted Teleport 信任传送</a> is maintained by <a href="https://github.com/ISOTOPE-Studio">ISOTOPE-Studio</a>.</span>
