Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <h1>
 <a id="trusted-teleport" class="anchor" href="#trusted-teleport" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trusted Teleport</h1>
 
-<p>方便的传送插件</p>
-
-<p><a href="http://www.mcbbs.net/thread-551491-1-1.html">MCBBS</a></p>
+<p>方便的传送插件V1.2</p>
 
 <h2>
 <a id="download下载" class="anchor" href="#download%E4%B8%8B%E8%BD%BD" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download/下载:</h2>
 
 <p><a href="https://github.com/ISOTOPE-Studio/TrustedTeleport/tree/master/files">https://github.com/ISOTOPE-Studio/TrustedTeleport/tree/master/files</a></p>
+
+<p><a href="https://github.com/ISOTOPE-Studio/TrustedTeleport/releases">https://github.com/ISOTOPE-Studio/TrustedTeleport/releases</a></p>
 
 <h2>
 <a id="命令" class="anchor" href="#%E5%91%BD%E4%BB%A4" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>命令:</h2>
@@ -50,6 +50,23 @@
 <p>TrustedTeleport.teleport - 允许使用 /tt 命令传送</p>
 
 <p>TrustedTeleport.setting - 允许使用 /ttp 命令</p>
+
+<h2>
+<a id="配置文件" class="anchor" href="#%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>配置文件</h2>
+
+<p><code>Teleporting:</code></p>
+
+<p><em>传送延迟，以秒为单位，0为立即传送</em></p>
+
+<p><code>delay: 3</code></p>
+
+<p><code></code></p>
+
+<p><em>true: 传送到发送命令时对方的位置</em></p>
+
+<p><em>false: 传送到延迟结束后对方的位置</em></p>
+
+<p><code>tpToLocWhereReq: true</code></p>
 
 <h2>
 <a id="插件定制" class="anchor" href="#%E6%8F%92%E4%BB%B6%E5%AE%9A%E5%88%B6" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>插件定制:</h2>
